# bevy_template

./: .gitignore  Cargo.toml  install_tooling.sh
.github/.workflows/: compile-for-platform.yml
.github/workflows/: compile-for-platform.yml
assets/: SpaceShip.gltf  VoxelAsteroid.gltf
src/: main.rs
